# Insurance-customer-service

./: .env  .gitignore  README.md  audio_client.py  docker-compose.yml  dockerfile.backend  dockerfile.frontend  hf_embedder.py  insurance_customer_service.FAQs.json  main.py  nomic_embedder.py  search.py
backend/: audio_client.py  embeddingsInitializer.py  main.py  pyproject.toml  requirements.txt  search.py  transcribe_client.py
frontend/: package-lock.json  package.json
frontend/app/: layout.js  page.js
frontend/components/CustomerService/: CustomerService.jsx  CustomerService.module.css  audio-processor.js
frontend/components/navBar/: Navbar.jsx
frontend/components/userProfile/: UserProfile.jsx
frontend/src/: App.js
frontend/src/_components/navBar/: Navbar.jsx
frontend/src/_components/userProfile/: UserProfile.jsx
frontend/src/_pages/AskThePDF/: askThePDF.module.css
frontend/src/_pages/CustomerService/: App.css  CustomerService.js  audioProcessor.js  customerService.module.css
